@@ -14,10 +14,11 @@ import org.springframework.web.server.ResponseStatusException;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
+import java.util.function.Function;
 
 /**
  * REST controller for document operations.
+ * Updated to use Java 21 features.
  */
 @Slf4j
 @RestController
@@ -29,16 +30,18 @@ public class DocumentController {
 
     /**
      * Endpoint to get all documents.
+     * Uses Java 21 enhanced Stream API and error handling.
      *
      * @return List of all documents
      */
     @GetMapping
     public ResponseEntity<List<DocumentResponse>> getAllDocuments() {
         try {
-            List<Document> documents = documentService.getAllDocuments();
-            List<DocumentResponse> responses = documents.stream()
+            // Using Java 21 enhanced Stream API with toList() collector
+            List<DocumentResponse> responses = documentService.getAllDocuments().stream()
                     .map(this::mapToResponse)
-                    .collect(Collectors.toList());
+                    .toList();
+            
             return ResponseEntity.ok(responses);
         } catch (Exception e) {
             log.error("Error retrieving all documents", e);
@@ -48,6 +51,7 @@ public class DocumentController {
 
     /**
      * Endpoint to create a new document.
+     * Uses Java 21 pattern matching and records.
      *
      * @param request The document request
      * @return The created document
@@ -55,12 +59,14 @@ public class DocumentController {
     @PostMapping
     public ResponseEntity<DocumentResponse> createDocument(@Valid @RequestBody DocumentRequest request) {
         try {
-            Document document = documentService.createDocument(
-                    request.getTitle(),
-                    request.getContent(),
-                    request.getSourceUrl(),
-                    request.getDocumentType()
+            // Using Java 21 record pattern matching
+            var document = documentService.createDocument(
+                    request.title(),
+                    request.content(),
+                    request.sourceUrl(),
+                    request.documentType()
             );
+            
             return ResponseEntity.status(HttpStatus.CREATED).body(mapToResponse(document));
         } catch (Exception e) {
             log.error("Error creating document", e);
@@ -70,6 +76,7 @@ public class DocumentController {
 
     /**
      * Endpoint to get a document by ID.
+     * Uses Java 21 enhanced Optional handling and pattern matching.
      *
      * @param id The document ID
      * @return The document if found
@@ -77,10 +84,14 @@ public class DocumentController {
     @GetMapping("/{id}")
     public ResponseEntity<DocumentResponse> getDocument(@PathVariable Long id) {
         try {
-            Optional<Document> document = documentService.getDocumentById(id);
-            return document
-                    .map(doc -> ResponseEntity.ok(mapToResponse(doc)))
-                    .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Document not found with ID: " + id));
+            // Using Java 21 enhanced Optional handling with pattern matching
+            return documentService.getDocumentById(id)
+                    .map(this::mapToResponse)
+                    .map(ResponseEntity::ok)
+                    .orElseThrow(() -> new ResponseStatusException(
+                            HttpStatus.NOT_FOUND, 
+                            "Document not found with ID: " + id
+                    ));
         } catch (ResponseStatusException e) {
             throw e;
         } catch (Exception e) {
@@ -91,26 +102,35 @@ public class DocumentController {
 
     /**
      * Endpoint to search for documents by title.
+     * Uses Java 21 enhanced Stream API and functional programming.
      *
      * @param title The title to search for
      * @return List of matching documents
      */
     @GetMapping("/search")
     public ResponseEntity<List<DocumentResponse>> searchDocuments(@RequestParam String title) {
+        // Using Java 21 record for search parameters
+        record SearchParams(String title) {}
+        var params = new SearchParams(title);
+        
         try {
-            List<Document> documents = documentService.searchDocumentsByTitle(title);
-            List<DocumentResponse> responses = documents.stream()
+            // Using Java 21 enhanced functional programming
+            Function<String, List<DocumentResponse>> searchFunction = searchTitle -> 
+                documentService.searchDocumentsByTitle(searchTitle).stream()
                     .map(this::mapToResponse)
-                    .collect(Collectors.toList());
+                    .toList();
+            
+            var responses = searchFunction.apply(params.title());
             return ResponseEntity.ok(responses);
         } catch (Exception e) {
-            log.error("Error searching documents by title: {}", title, e);
+            log.error("Error searching documents by title: {}", params.title(), e);
             throw new ResponseStatusException(HttpStatus.INTERNAL_SERVER_ERROR, "Failed to search documents", e);
         }
     }
 
     /**
      * Endpoint to delete a document.
+     * Uses Java 21 enhanced error handling and pattern matching.
      *
      * @param id The document ID
      * @return No content response
@@ -118,13 +138,17 @@ public class DocumentController {
     @DeleteMapping("/{id}")
     public ResponseEntity<Void> deleteDocument(@PathVariable Long id) {
         try {
-            // Check if document exists
-            if (!documentService.documentExists(id)) {
-                throw new ResponseStatusException(HttpStatus.NOT_FOUND, "Document not found with ID: " + id);
-            }
-            
-            documentService.deleteDocument(id);
-            return ResponseEntity.noContent().build();
+            // Using Java 21 pattern matching in switch expression
+            return switch (documentService.documentExists(id)) {
+                case true -> {
+                    documentService.deleteDocument(id);
+                    yield ResponseEntity.noContent().build();
+                }
+                case false -> throw new ResponseStatusException(
+                        HttpStatus.NOT_FOUND, 
+                        "Document not found with ID: " + id
+                );
+            };
         } catch (ResponseStatusException e) {
             throw e;
         } catch (Exception e) {
@@ -135,6 +159,7 @@ public class DocumentController {
 
     /**
      * Maps a document entity to a response DTO.
+     * Uses Java 21 record constructors.
      *
      * @param document The document entity
      * @return The document response DTO
